turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: not found: value R
if(rule(n)== R){
             ^